# MBTI-NLP

./: .gitignore  README.md  mbti_twitter.ipynb  mbti_types.html  mbti_types.ipynb  pyproject.toml
