[tool.poetry]
name = "ads-mbti"
version = "0.1.0"
description = ""
authors = ["Emanuele <emanuelelena021099@gmail.com>"]
readme = "README.md"
packages = [{include = "ads_mbti"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
nltk = "^3.8.1"
gensim = "^4.3.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
textblob = "^0.17.1"
spacy = "^3.5.4"
spacy-langdetect = "^0.1.2"
pandoc = "^2.3"
nbconvert = "^7.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
